# JUCEMake

./: CMakeLists.txt  LICENSE.txt  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
